# stateful_rag

./: .gitignore  LICENSE  README.md  docker-compose.yml  init_db.py  pyproject.toml
examples/: demo_app.py  medical_demo.py
stateful_rag/: __init__.py  models.py  retriever.py
stateful_rag/stores/: __init__.py  base.py  memory.py  postgres.py
stateful_rag/wrappers/: __init__.py  langchain_wrapper.py  llamaindex_wrapper.py
tests/: test_langchain.py  test_llamaindex.py  test_postgres.py  test_week1.py
