[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stateful-rag"
version = "0.1.0"
description = "Sustainable, O(1) memory caching for multi-turn RAG."
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pgvector>=0.2.0",
    "psycopg[binary]>=3.1.0",
    "numpy>=1.24.0"
]
