[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stateful-rag"
version = "0.4.0"
description = "Sustainable, O(1) memory caching for multi-turn RAG using PostgreSQL."
requires-python = ">=3.10"
authors = [
  {name = "Naveen Kamalakannan"},
  {name = "Ankita Jogekar"},
  {name = "Umaima Haider"}
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "pgvector>=0.2.0",
    "psycopg[binary]>=3.1.0",
    "numpy>=1.24.0",
    "langchain-core>=0.1.0",
    "llama-index-core>=0.10.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
demo = [
    "sentence-transformers>=2.2.2",
    "streamlit>=1.30.0"
]

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "docs*"]
